--- a/package.json
+++ b/package.json
@@ -80,9 +80,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/bluebird": "^3.5.38",
     "@types/crypto-js": "^4.1.1",
     "@types/faker": "^5.5.9",
     "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -121,7 +123,9 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "lodash": "^4.17.21"
   }
 }
